refactor: rename DTO to Dto project-wide to satisfy coding standards
